# Heterogeneous-Multicore

./: .gitignore  CH32V307.code-workspace  ESP32-S3.code-workspace  STM32F407ZGT6.code-workspace  build.sh  can_异构综合项目.code-workspace  完成清单.md
CH32V307/: .clangd  CMakeLists.txt  CMakePresets.json
CH32V307/.cursor/rules/: etl-upper-layer.mdc
CH32V307/SRC/Ld/: Link.ld
CH32V307/SRC/Startup/: startup_ch32v30x_D8C.S
CH32V307/SRC/User/: spi.c  spi.h  usart.c  usart.h
CH32V307/app/inc/: app_led_task.hpp  freeRTOS.hpp
CH32V307/app/src/: app_flash_task.cpp  main.cpp
CH32V307/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  ch307_node  ch307_node.lst  ch307_node.map  cmake_install.cmake  compile_commands.json
CH32V307/build-ninja/hal/: cmake_install.cmake
CH32V307/build-ninja/mini_tree/: cmake_install.cmake
CH32V307/build-ninja/mini_tree_etl/: cmake_install.cmake
CH32V307/cmake/: riscv32-wch-elf-ch32v307.cmake
CH32V307/hal/: CMakeLists.txt
CH32V307/mini_tree/: .config  CMakeLists.txt  Kconfig
CH32V307/mini_tree/algorithm/buffer/: circle_fifo_buffer.c  m_buffer.h
CH32V307/mini_tree/board/: CMakeLists.txt
CH32V307/mini_tree/board/docs/: Code_Wiki.md  devicetree.md
CH32V307/mini_tree/board/dts/: ch32v307.dts
CH32V307/mini_tree/board/dtsi/: ch32v307-spi.dtsi  ch32v307-uart.dtsi  ch32v307.dtsi
CH32V307/mini_tree/board/include/: VFS.h  bus.h  device.h  vfs_adc.h  vfs_gpio.h  vfs_pwm.h  vfs_storage.h
CH32V307/mini_tree/board/src/: board_device.c  board_driver.c  bus.c
CH32V307/mini_tree/bus/dma/: dma_ch32.c
CH32V307/mini_tree/bus/spi/: SPI.md  spi_bus.c
CH32V307/mini_tree/compat/: arduino_io.h
CH32V307/mini_tree/core/include/: compiler_compat.h  event_bus.h  printf_output.h  production_log.h  system_log.h
CH32V307/mini_tree/core/src/: buffer_pool.c  event_bus.cpp  production_log.c
CH32V307/mini_tree/drivers/flash/: w25q64_spi_drv.c
CH32V307/mini_tree/drivers/ws2812/: ws2812_drv.c
CH32V307/mini_tree/hal/cpu/: hal_cpu.h
CH32V307/mini_tree/hal/gpio/: hal_gpio.h  hal_gpio_ch32.c
CH32V307/mini_tree/hal/spi/: hal_spi.h  hal_spi_ch32.c
CH32V307/mini_tree/hal/system/: hal_dma_ch32.c  hal_dma_ch32.h
CH32V307/mini_tree/hal/uart/: hal_uart_ch32.c
CH32V307/mini_tree/hal_bus/include/: hal_i2c_bus.h  hal_i2s_bus.h  hal_usb_bus.h
CH32V307/mini_tree/hal_if/include/: hal_adc.h  hal_cpu_fast.h  hal_dac.h  hal_gpio.h  hal_pwm_fast.h  hal_rtc.h  hal_sdio.h  hal_storage.h  hal_uart.h
CH32V307/mini_tree/hal_if/src/: hal_ch32v307.c  hal_platform_safety.c
CH32V307/mini_tree/hal_inst/include/: hal_i2c.h  hal_i2s.h  hal_spi_bus_host.h
CH32V307/mini_tree/hal_inst/src/: hal_inst_dummy.c  hal_spi_stub.c
CH32V307/mini_tree/lib/freeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
CH32V307/mini_tree/lib/rtthread/: CMakeLists.txt
CH32V307/mini_tree/osal/include/: osal.h  osal_null.h
CH32V307/mini_tree/osal/src/: osal_freertos.c  osal_null.c  osal_rtthread.c
CH32V307/mini_tree/system_c/include/: task_manager.h
CH32V307/mini_tree/system_c/src/: system_scrubber.c
CH32V307/mini_tree/system_cpp/include/: system_cmd.hpp
CH32V307/mini_tree/system_cpp/src/: system_scrubber.cpp
CH32V307/mini_tree/tools/: genconfig.py  sync_from_esp_baseline.py
CH32V307/mini_tree/tools/dtc_lite/: compiler.py
CH32V307/mini_tree/vfs/spi/: spi_bus.c  spi_client.c  spi_vfs.c
CH32V307/mini_tree/vfs/uart/: uart_vfs.c
ESP32-S3/components/app/: CMakeLists.txt  idf_component.yml
ESP32-S3/components/app/inc/: app_flash_task.hpp  app_led_task.hpp  app_rtos.hpp  app_spi_task.hpp
ESP32-S3/components/app/src/: app_flash_task.cpp  app_freertos.cpp  app_led_task.cpp  app_spi_task.cpp
ESP32-S3/components/mini_tree/: .config  CMakeLists.txt  Kconfig  error_symbols.ld
ESP32-S3/components/mini_tree/board/: CMakeLists.txt
ESP32-S3/components/mini_tree/core/: CMakeLists.txt
ESP32-S3/components/mini_tree/hal_bus/: CMakeLists.txt  hal_bus_dummy.c  paths.cmake
ESP32-S3/components/mini_tree/hal_if/: CMakeLists.txt  paths.cmake
ESP32-S3/components/mini_tree/hal_inst/: CMakeLists.txt
ESP32-S3/components/mini_tree/system_cpp/: CMakeLists.txt  compile_flags.txt
ESP32-S3/components/mini_tree/tools/: convert_struct_typedef.py  dtc-lite.py  gen_uvprojx.py  genconfig.py
STM32F407ZGT6/hal/: CMakeLists.txt
STM32F407ZGT6/hal/src/: hal_spi_stm32.c  hal_stm32f407.c  hal_uart_stm32.c
STM32F407ZGT6/mini_tree/: .config  CMakeLists.txt  Kconfig
STM32F407ZGT6/mini_tree/algorithm/buffer/: circle_fifo_buffer.c
STM32F407ZGT6/mini_tree/board/: CMakeLists.txt
STM32F407ZGT6/mini_tree/board/docs/: devicetree.md
STM32F407ZGT6/mini_tree/board/dts/: stm32f407zgt6.dts
STM32F407ZGT6/mini_tree/board/dtsi/: stm32f407-spi.dtsi  stm32f407-uart.dtsi
STM32F407ZGT6/mini_tree/board/include/: VFS.h  board_config.h  bus.h  dev_lifecycle.h  device.h  task_config.h
STM32F407ZGT6/mini_tree/board/src/: board_device.c  board_driver.c  bus.c  config_store.c  dev_lifecycle.c  task_config.c
STM32F407ZGT6/mini_tree/bus/dma/: dma_stm32.c
STM32F407ZGT6/mini_tree/bus/uart/: uart_bus.c
STM32F407ZGT6/mini_tree/core/include/: buffer_pool.h  compiler_compat.h  printf_output.h  system_log.h
STM32F407ZGT6/mini_tree/core/src/: buffer_pool.c  printf_output.c
STM32F407ZGT6/mini_tree/drivers/fft/: fft_spi_drv.c
STM32F407ZGT6/mini_tree/drivers/flash/: w25q64_drv.h  w25q64_spi_drv.c
STM32F407ZGT6/mini_tree/hal/cpu/: hal_cpu.h
STM32F407ZGT6/mini_tree/hal/gpio/: hal_gpio.h  hal_gpio_stm32.c
STM32F407ZGT6/mini_tree/hal/pwm/: hal_pwm.h
STM32F407ZGT6/mini_tree/hal/spi/: hal_spi_stm32.c
STM32F407ZGT6/mini_tree/hal/system/: hal_dma_stm32.c  hal_dma_stm32.h
STM32F407ZGT6/mini_tree/hal/uart/: hal_uart.h  hal_uart_stm32.c
STM32F407ZGT6/mini_tree/hal_bus/: CMakeLists.txt  paths.cmake
STM32F407ZGT6/mini_tree/hal_bus/bus/: bus.h
STM32F407ZGT6/mini_tree/hal_bus/can/: hal_can_bus.h
STM32F407ZGT6/mini_tree/hal_if/: CMakeLists.txt  paths.cmake
STM32F407ZGT6/mini_tree/hal_inst/: CMakeLists.txt
STM32F407ZGT6/mini_tree/tools/: dtc-lite.py  genconfig.py  sync_from_esp_baseline.py
(+629 files in other folders)
